<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y23"
        android:background="@color/appThemeColor"
        android:gravity="center"
        android:text="@string/user_presonal_change_avatar"
        android:textColor="@color/white"
        android:textSize="@dimen/x16" />

    <!--相机-->
    <LinearLayout
        android:id="@+id/picture_selected_camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y46"
        android:background="@drawable/default_click_selector"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/y27"
            android:layout_height="@dimen/y27"
            android:src="@drawable/camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x13"
            android:text="@string/picture_selected_camera"
            android:textColor="@color/text_color_small_title"
            android:textSize="@dimen/x16" />

    </LinearLayout>

    <View style="@style/divider_line_height2" />

    <!--相册-->
    <LinearLayout
        android:id="@+id/picture_selected_gallery"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y46"
        android:background="@drawable/default_click_selector"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/y27"
            android:layout_height="@dimen/y27"
            android:src="@drawable/gallery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x13"
            android:text="@string/picture_selected_gallery"
            android:textColor="@color/text_color_small_title"
            android:textSize="@dimen/x16" />

    </LinearLayout>
</LinearLayout>
