<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/x8">

    <TextView
        android:id="@+id/list_item_checked"
        android:layout_width="@dimen/y13"
        android:layout_height="@dimen/y13"
        android:background="@drawable/checked_selector" />

    <ImageView
        android:id="@+id/list_item_shop_image"
        android:layout_width="@dimen/y62"
        android:layout_height="@dimen/y62"
        android:layout_gravity="center"
        android:layout_margin="@dimen/x10"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_shop_describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_normal_title"
            android:textSize="@dimen/x12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y2"
            android:layout_marginTop="@dimen/y6"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item_all_need_text1"
                android:textColor="@color/text_color_small_title"
                android:textSize="@dimen/x12" />

            <TextView
                android:id="@+id/list_item_all_need"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_small_title"
                android:textSize="@dimen/x12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item_all_need_text2"
                android:textColor="@color/text_color_small_title"
                android:textSize="@dimen/x12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item_next_need_text1"
                android:textColor="@color/text_color_small_title"
                android:textSize="@dimen/x12" />

            <TextView
                android:id="@+id/list_item_next_need"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/announced_progress_text_color"
                android:textSize="@dimen/x12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item_next_need_text2"
                android:textColor="@color/text_color_small_title"
                android:textSize="@dimen/x12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/list_item_shop_less"
                android:layout_width="@dimen/x35"
                android:layout_height="@dimen/y21"
                android:src="@drawable/list_item_shop_less" />

            <TextView
                android:id="@+id/list_item_shop_num"
                android:layout_width="@dimen/x40"
                android:layout_height="@dimen/y21"
                android:layout_marginLeft="-1dp"
                android:layout_marginRight="-1dp"
                android:background="@drawable/main_tab_bg"
                android:gravity="center"
                android:src="@drawable/list_item_shop_less" />

            <ImageView
                android:id="@+id/list_item_shop_add"
                android:layout_width="@dimen/x35"
                android:layout_height="@dimen/y21"
                android:src="@drawable/list_item_shop_add" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
