<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <View style="@style/divider_line_height2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <!--收货人-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/y9"
            android:paddingLeft="@dimen/x22"
            android:paddingRight="@dimen/x8"
            android:paddingTop="@dimen/y9">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/user_presonal_address_edt_shouhuoren"
                android:textColor="@color/text_color_normal_title"
                android:textSize="@dimen/x13" />

            <EditText
                android:id="@+id/user_presonal_address_edt_shouhuoren"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@color/white"
                android:textColor="@color/text_color_small_title"
                android:textSize="@dimen/x13" />

        </LinearLayout>

        <View
            style="@style/divider_line_height2"
            android:layout_marginLeft="@dimen/x13" />

        <!--手机号码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/y9"
            android:paddingLeft="@dimen/x22"
            android:paddingRight="@dimen/x8"
            android:paddingTop="@dimen/y9">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/user_presonal_address_edt_phone"
                android:textColor="@color/text_color_normal_title"
                android:textSize="@dimen/x13" />

            <EditText
                android:id="@+id/user_presonal_address_edt_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@color/white"
                android:textColor="@color/text_color_small_title"
                android:textSize="@dimen/x13" />

        </LinearLayout>

        <View
            style="@style/divider_line_height2"
            android:layout_marginLeft="@dimen/x13" />

        <!--省份选择-->
        <LinearLayout
            android:id="@+id/user_presonal_address_edt_sheng_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_click_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/y9"
            android:paddingLeft="@dimen/x22"
            android:paddingRight="@dimen/x8"
            android:paddingTop="@dimen/y9">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_presonal_address_edt_sheng"
                android:textColor="@color/text_color_normal_title"
                android:textSize="@dimen/x13" />

            <TextView
                android:id="@+id/user_presonal_address_edt_sheng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_presonal_address_edt_address_hint"
                android:textColor="@color/text_color_small_title"
                android:textSize="@dimen/x13" />

            <ImageView
                android:layout_width="@dimen/y13"
                android:layout_height="@dimen/y13"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_down" />

        </LinearLayout>

        <View
            style="@style/divider_line_height2"
            android:layout_marginLeft="@dimen/x13" />

        <!--城市选择-->
        <LinearLayout
            android:id="@+id/user_presonal_address_edt_city_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_click_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/y9"
            android:paddingLeft="@dimen/x22"
            android:paddingRight="@dimen/x8"
            android:paddingTop="@dimen/y9">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_presonal_address_edt_city"
                android:textColor="@color/text_color_normal_title"
                android:textSize="@dimen/x13" />

            <TextView
                android:id="@+id/user_presonal_address_edt_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_presonal_address_edt_address_hint"
                android:textColor="@color/text_color_small_title"
                android:textSize="@dimen/x13" />

            <ImageView
                android:layout_width="@dimen/y13"
                android:layout_height="@dimen/y13"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_down" />

        </LinearLayout>

        <View
            style="@style/divider_line_height2"
            android:layout_marginLeft="@dimen/x13" />

        <!--区选择-->
        <LinearLayout
            android:id="@+id/user_presonal_address_edt_qu_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_click_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/y9"
            android:paddingLeft="@dimen/x22"
            android:paddingRight="@dimen/x8"
            android:paddingTop="@dimen/y9">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_presonal_address_edt_qu"
                android:textColor="@color/text_color_normal_title"
                android:textSize="@dimen/x13" />

            <TextView
                android:id="@+id/user_presonal_address_edt_qu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_presonal_address_edt_address_hint"
                android:textColor="@color/text_color_small_title"
                android:textSize="@dimen/x13" />

            <ImageView
                android:layout_width="@dimen/y13"
                android:layout_height="@dimen/y13"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_down" />

        </LinearLayout>

        <View
            style="@style/divider_line_height2"
            android:layout_marginLeft="@dimen/x13" />

        <!--详细地址-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/y9"
            android:paddingLeft="@dimen/x22"
            android:paddingRight="@dimen/x8"
            android:paddingTop="@dimen/y9">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/user_presonal_address_edt_detail"
                android:textColor="@color/text_color_normal_title"
                android:textSize="@dimen/x13" />

            <EditText
                android:id="@+id/user_presonal_address_edt_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@color/white"
                android:textColor="@color/text_color_small_title"
                android:textSize="@dimen/x13" />

        </LinearLayout>

        <View
            style="@style/divider_line_height2"
            android:layout_marginLeft="@dimen/x13" />

        <!--是否设置为默认地址-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/y9"
            android:paddingLeft="@dimen/x22"
            android:paddingRight="@dimen/x8"
            android:paddingTop="@dimen/y9">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/user_presonal_address_edt_set_default"
                android:textColor="@color/text_color_normal_title"
                android:textSize="@dimen/x13" />

            <ImageView
                android:id="@+id/user_presonal_address_edt_set_default"
                android:layout_width="@dimen/x44"
                android:layout_height="@dimen/y15"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/checked_scroll_selector" />

        </RelativeLayout>

        <View style="@style/divider_line_height2" />
    </LinearLayout>

</LinearLayout>
